# RubicsCubeSolver

./: CMakeLists.txt  GenericRubicsCube.cpp  GenericRubicsCube.h  RubiksCube1DArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  main.cpp
Modal/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1DArray.cpp  RubiksCube3dArray.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
